# workforce-automation-analytics

./: .env.example  .gitignore  README.md
apps/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: absences.py  availability.py  employees.py  google_sheets.py  health.py  router.py  scheduling.py  shifts.py
apps/backend/app/core/: config.py
apps/backend/app/db/: base.py  enums.py  session.py
apps/backend/app/db/migrations/: README.md  env.py
apps/backend/app/db/models/: __init__.py  absence.py  availability.py  employee.py  scheduling.py  shift.py
apps/backend/app/integrations/: google_sheets.py
apps/backend/app/schemas/: absences.py  availability.py  employees.py  google_sheets.py  health.py  scheduling.py  shifts.py
apps/backend/app/services/: absence_queries.py  availability_analysis.py  availability_import.py  availability_queries.py  availability_storage.py  scheduling_preview.py  scheduling_queries.py  scheduling_storage.py  shift_queries.py  shift_storage.py
apps/backend/app/workers/: celery_app.py
apps/backend/app/workers/tasks/: health.py
apps/backend/tests/: test_absence_api.py  test_availability_analysis.py  test_availability_api.py  test_availability_import.py  test_availability_queries.py  test_availability_storage.py  test_google_sheets_import.py  test_health.py  test_models.py  test_scheduling_api.py  test_scheduling_preview.py  test_scheduling_queries.py  test_scheduling_storage.py  test_shift_api.py  test_worker.py
docs/: architecture.md  (+4 more)
(+39 files in other folders)
